<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.example.oluwatobig.hangmaan.SplashActivity">

    <TextView
        android:id="@+id/gameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="#f00"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="60dp"/>

    <Button
        android:id="@+id/singlePlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singleP"
        android:textSize="28sp"
        android:fontFamily="sans-serif"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/gameName"
        android:onClick="startSinglePlayerGame"
        android:layout_marginBottom="25dp" />

    <Button
        android:id="@+id/multiPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiP"
        android:textSize="28sp"
        android:fontFamily="sans-serif"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/singlePlayer"
        android:onClick="startMultiPlayerGame"
        android:layout_marginBottom="25dp"/>

    <Button
        android:id="@+id/scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores"
        android:textSize="28sp"
        android:onClick="seeScores"
        android:fontFamily="sans-serif"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/multiPlayer"
        android:layout_marginBottom="28dp" />

</RelativeLayout>
